syntax = "proto3";
package StaffRecords;

message StaffRecord {
  string staffID = 1;
  string name = 2;
  string jobTitle = 3;
  string department = 4;
  bool isAvailable = 5;
}

service StaffRecords {
  // Service Methods
  rpc Create (CreateStaff) returns (CreateResponse);
  rpc Get (GetStaffRecords) returns (GetResponse);
  rpc GetAvailability (GetStaffAvailability) returns (GetAvailabilityResponse);
  rpc Update (UpdateStaff) returns (UpdateResponse);
  rpc Delete (DeleteStaff) returns (DeleteResponse);

  // Health Check Methods
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

// CREATE

message CreateStaff {
  StaffRecord staff = 1;
}

message CreateResponse {
  string staffID = 1;
  string message = 2;
  string error = 3;
}

// GET STAFF

message GetStaffRecords {}

message GetResponse {
  repeated StaffRecord staffRecords = 1;
  string error = 2;
}

// GET AVAILABILITY

message GetStaffAvailability {
  string staffID = 1;
}

message GetAvailabilityResponse {
  string staffID = 1;
  bool isAvailable = 2;
  string error = 3;
}

// UPDATE

message UpdateStaff {
  StaffRecord staffRecord = 1;
}

message UpdateResponse {
  string staffID = 1;
  string message = 2;
  string error = 3;
}

// DELETE

message DeleteStaff {
  string staffID = 1;
}

message DeleteResponse {
  string staffID = 1;
  string message = 2;
  string error = 3;
}

// HEALTH

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}